Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8874

Replication filters configured in my.cnf are ignored if slave reset and reconfigured

    XMLWordPrintable

Details

    • 10.1.22

    Description

      This MariaDB instance is using multi source replication and has 4 masters.
      We have separate replication filters on each of the master connections, configured in my.cnf.
      When we issue a RESET SLAVE ALL for one of the connections, where replication filters are in effect, and then we create the connection again with CHANGE MASTER 'connection name' TO.... , the replication filters are now ignored and we need to restart the server to bring them back in effect.

      Attachments

        Activity

          People

            sachin.setiya.007 Sachin Setiya (Inactive)
            leopardus2 Rick Pizzi
            Votes:
            1 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 25m
                25m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.