MDEV-8874 Replication filters configured in my.cnf are ignored if slave reset and reconfigured

Don't delete the rpl_filter on RESET SLAVE.