sql/rpl_mi.cc
@@ -122,8 +122,6 @@ Master_info::~Master_info()
   */
   if (strncmp(connection_name.str, STRING_WITH_LEN("wsrep")))
 #endif
-  rpl_filters.delete_element(connection_name.str, connection_name.length,
-                             (void (*)(const char*, uchar*)) free_rpl_filter);
   my_free(connection_name.str);
   delete_dynamic(&ignore_server_ids);
   mysql_mutex_destroy(&run_lock);
